force-app/main/default/objects/iManageAuthSetting__mdt/iManageAuthSetting__mdt.object-meta.xml
<CustomObject>
    <label>iManageAuthSetting</label>
    <pluralLabel>iManageAuthSettings</pluralLabel>
</CustomObject>