force-app/main/default/objects/iManageAuthSetting__mdt/fields/Authorize_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Endpoint_URL__c</fullName>
    <label>Authorize Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>