force-app/main/default/objects/iManageAuthSetting__mdt/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>