force-app/main/default/objects/iManageAuthSetting__mdt/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <label>Redirect URI</label>
    <required>true</required>
    <type>Url</type>
</CustomField>