force-app/main/default/objects/iManageAuthSetting__mdt/fields/User_Info_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Info_URL__c</fullName>
    <label>User Info URL</label>
    <type>Url</type>
</CustomField>